# OwlCppWorkspace

./: .gitignore  .gitmodules  README.md
brain_dump/union_in_union/: CMakeLists.txt  union_onion.cpp
cmake_hell/01-target_include_directories/: README.md
cmake_hell/01-target_include_directories/example-3/: CMakeLists.txt
cmake_hell/01-target_include_directories/example-3/core/: core.hpp
cmake_hell/01-target_include_directories/example-4/: CMakeLists.txt  example.cpp
cmake_hell/01-target_include_directories/example-4/core/: CMakeLists.txt
cmake_hell/01-target_include_directories/example-4/core/include/: core.hpp
cmake_hell/01-target_include_directories/example-4/utils/: logger.hpp
cmake_hell/target_include_directories/: CMakeLists.txt  README.md  example.cpp
cmake_hell/target_include_directories/core/: core.hpp
imgui_test/: CMakeLists.txt  main_sdl2_opengl3.cpp
imgui_test/src/: glad.c
